--- a/frontend/src/i18n/el.json
+++ b/frontend/src/i18n/el.json
@@ -49,7 +49,7 @@
     },
     "errors": {
         "forbidden": "Δεν έχετε άδεια πρόσβασης σε αυτό.",
-        "internal": "Κάτι πήγε πολύ στραβά (εσωτερικό σφάλμα).",
+        "internal": "Προέκυψε εσωτερικό σφάλμα.",
         "notFound": "Αυτή η τοποθεσία δεν μπορεί να βρεθεί.",
         "connection": "Ο διακομιστής δεν είναι διαθέσιμος."
     },
@@ -135,7 +135,7 @@
         "displayName": "Εμφάνιση ονόματος:",
         "download": "Λήψη αρχείων",
         "downloadMessage": "Επιλέξτε τη μορφή που θέλετε να λάβετε.",
-        "error": "Κάτι πήγε στραβά",
+        "error": "Προέκυψε κάποιο σφάλμα",
         "fileInfo": "Πληροφορίες αρχείου",
         "filesSelected": "Επιλέχθηκαν {count} αρχεία.",
         "lastModified": "Τελευταία τροποποίηση",
