--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -129,6 +129,7 @@
     "deleteMessageMultiple": "Are you sure you want to delete {count} file(s)?",
     "deleteMessageSingle": "Are you sure you want to delete this file/folder?",
     "deleteMessageShare": "Are you sure you want to delete this share({path})?",
+    "deleteUser": "Are you sure you want to delete this user?",
     "deleteTitle": "Delete files",
     "displayName": "Display Name:",
     "download": "Download files",
