feat: translate the rest too

--- a/frontend/src/i18n/ja.json
+++ b/frontend/src/i18n/ja.json
@@ -156,7 +156,7 @@
     "replaceMessage": "アップロードしようとしているファイルと既存のファイルの名前が重複しています。既存のものを置き換えずにアップロードを続けるか、既存のものを置き換えますか？\n",
     "schedule": "スケジュール",
     "scheduleMessage": "この投稿の公開予定日時を選んでください。",
-    "show": "見る？",
+    "show": "表示",
     "size": "サイズ",
     "upload": "アップロード",
     "uploadFiles": "{files} 個のファイルをアップロードしています…",
@@ -175,7 +175,7 @@
   },
   "settings": {
     "admin": "管理者",
-    "administrator": "アドミニストレーター",
+    "administrator": "管理者",
     "allowCommands": "コマンドの実行",
     "allowEdit": "ファイルやフォルダーの編集、名前の変更、削除",
     "allowNew": "ファイルやフォルダーの新規作成",
@@ -187,11 +187,11 @@
     "brandingHelp": "インスタンスの名前の変更、ロゴの変更、カスタムスタイルの追加、GitHub への外部リンクの無効化など、File Browser の見た目や使い勝手をカスタマイズすることができます。\nカスタムブランディングの詳細については、{0}をご覧ください。",
     "changePassword": "パスワードの変更",
     "commandRunner": "コマンドランナー",
-    "commandRunnerHelp": "Here you can set commands that are executed in the named events. You must write one per line. The environment variables {0} and {1} will be available, being {0} relative to {1}. For more information about this feature and the available environment variables, please read the {2}.",
+    "commandRunnerHelp": "ここでは、指定したイベントの際に実行されるコマンドを設定することができます。1行に1つずつ書く必要があります。環境変数として {0} や {1} が使用可能で、{0} は {1} に関連した変数として扱われます。この機能と使用可能な環境変数の詳細については、{2}をお読みください。",
     "commandsUpdated": "コマンドを更新しました！",
     "createUserDir": "新規ユーザー追加時にユーザーのホームディレクトリを自動生成する",
     "tusUploads": "Chunked Uploads",
-    "tusUploadsHelp": "File Browser は、チャンクされたファイルアップロードをサポートしており、信頼性の低いネットワーク上でも、効率的で信頼性の高い、再開可能なチャンクされたファイルアップロードを作成することができます。",
+    "tusUploadsHelp": "File Browser はチャンクされたファイルアップロードをサポートしており、信頼性の低いネットワーク上でも、効率的で信頼性の高い、再開可能なチャンクされたファイルアップロードを作成することができます。",
     "tusUploadsChunkSize": "1チャンクあたりのリクエストの最大サイズ。バイト数を示す整数か、10MB、1GBなどの文字列を入力できます。",
     "tusUploadsRetryCount": "チャンクのアップロードに失敗した場合の再試行回数。",
     "userHomeBasePath": "ユーザーのホームディレクトリのベースパス",
@@ -229,12 +229,12 @@
       "share": "ファイルの共有"
     },
     "permissions": "権限",
-    "permissionsHelp": "You can set the user to be an administrator or choose the permissions individually. If you select \"Administrator\", all of the other options will be automatically checked. The management of users remains a privilege of an administrator.\n",
+    "permissionsHelp": "ユーザーを管理者に設定するか、その他の権限を個別に選択することができます。「管理者」を選択すると、他のオプションはすべて自動的にチェックされます。ユーザーを管理するには管理者権限が必要です。\n",
     "profileSettings": "プロフィール設定",
-    "ruleExample1": "prevents the access to any dot file (such as .git, .gitignore) in every folder.\n",
-    "ruleExample2": "blocks the access to the file named Caddyfile on the root of the scope.",
+    "ruleExample1": ".git や .gitignore のようなドットから始まるファイルへのアクセスを禁止します。\n",
+    "ruleExample2": "スコープのルートにある Caddyfile という名前のファイルへのアクセスを禁止します。",
     "rules": "ルール",
-    "rulesHelp": "Here you can define a set of allow and disallow rules for this specific user. The blocked files won't show up in the listings and they wont be accessible to the user. We support regex and paths relative to the users scope.\n",
+    "rulesHelp": "ここでは、特定のユーザーに対して許可と不許可のルールを設定することができます。ブロックされたファイルはリストに表示されず、ユーザはアクセスできなくなります。正規表現とユーザースコープからの相対パスをサポートしています。\n",
     "scope": "スコープ",
     "setDateFormat": "日時の形式を MM/DD/YYYY H:MM AM/PM にする",
     "settingsUpdated": "設定を更新しました！",
