--- a/frontend/src/i18n/el.json
+++ b/frontend/src/i18n/el.json
@@ -1,6 +1,7 @@
 {
     "buttons": {
         "cancel": "Ακύρωση",
+        "clear": "Καθαρισμός",
         "close": "Κλείσιμο",
         "copy": "Αντιγραφή",
         "copyFile": "Αντιγραφή αρχείου",
@@ -36,8 +37,7 @@
         "toggleSidebar": "(Απ-)ενεργοποίησης της πλευρικής μπάρας",
         "update": "Ενημέρωση",
         "upload": "Μεταφόρτωση",
-        "openFile": "Άνοιγμα αρχείου",
-        "continue": "Συνέχεια"
+        "openFile": "Άνοιγμα αρχείου"
     },
     "download": {
         "downloadFile": "Λήψη αρχείου",
@@ -55,7 +55,6 @@
     },
     "files": {
         "body": "Περιεχόμενο",
-        "clear": "Καθαρισμός",
         "closePreview": "Κλείσιμο προεπισκόπησης",
         "files": "Αρχεία",
         "folders": "Φάκελοι",
