--- a/frontend/src/i18n/fr.json
+++ b/frontend/src/i18n/fr.json
@@ -1,15 +1,19 @@
 {
   "buttons": {
     "cancel": "Annuler",
+    "clear": "Effacer",
     "close": "Fermer",
+    "continue": "Continuer",
     "copy": "Copier",
     "copyFile": "Copier le fichier",
     "copyToClipboard": "Copier dans le presse-papier",
+    "copyDownloadLinkToClipboard": "Copier le lien de téléchargement dans le presse-papier",
     "create": "Créer",
     "delete": "Supprimer",
     "download": "Télécharger",
     "file": "Fichier",
     "folder": "Dossier",
+    "fullScreen": "Plein écran",
     "hideDotfiles": "Masquer les dotfiles",
     "info": "Info",
     "more": "Plus",
@@ -51,7 +55,6 @@
   },
   "files": {
     "body": "Corps",
-    "clear": "Fermer",
     "closePreview": "Fermer la prévisualisation",
     "files": "Fichiers",
     "folders": "Dossiers",
@@ -87,21 +90,22 @@
     "hu": "Magyar",
     "ar": "العربية",
     "de": "Deutsch",
+    "el": "Ελληνικά",
     "en": "English",
     "es": "Español",
     "fr": "Français",
-    "is": "",
+    "is": "Icelandic",
     "it": "Italiano",
     "ja": "日本語",
     "ko": "한국어",
-    "nlBE": "",
+    "nlBE": "Dutch (Belgium)",
     "pl": "Polski",
     "pt": "Português",
     "ptBR": "Português (Brasil)",
-    "ro": "",
+    "ro": "Romanian",
     "ru": "Русский",
     "sk": "Slovenčina",
-    "svSE": "",
+    "svSE": "Swedish (Sweden)",
     "tr": "Türkçe",
     "uk": "Українська",
     "zhCN": "中文 (简体)",
