--- a/frontend/src/i18n/it.json
+++ b/frontend/src/i18n/it.json
@@ -1,7 +1,9 @@
 {
   "buttons": {
     "cancel": "Annulla",
+    "clear": "Cancella",
     "close": "Chiudi",
+    "continue": "Continua",
     "copy": "Copia",
     "copyFile": "Copia file",
     "copyToClipboard": "Copia negli appunti",
@@ -46,7 +48,6 @@
   },
   "files": {
     "body": "Contenuto",
-    "clear": "Cancella",
     "closePreview": "Chiudi anteprima",
     "files": "File",
     "folders": "Cartelle",
@@ -81,21 +82,22 @@
     "hu": "Magyar",
     "ar": "العربية",
     "de": "Deutsch",
+    "el": "Ελληνικά",
     "en": "English",
     "es": "Español",
     "fr": "Français",
-    "is": "",
+    "is": "Icelandic",
     "it": "Italiano",
     "ja": "日本語",
     "ko": "한국어",
-    "nlBE": "",
+    "nlBE": "Dutch (Belgium)",
     "pl": "Polski",
     "pt": "Português",
     "ptBR": "Português (Brasil)",
-    "ro": "",
+    "ro": "Romanian",
     "ru": "Русский",
     "sk": "Slovenčina",
-    "svSE": "",
+    "svSE": "Swedish (Sweden)",
     "tr": "Türkçe",
     "uk": "Українська",
     "zhCN": "中文 (简体)",
