--- a/frontend/src/i18n/ja.json
+++ b/frontend/src/i18n/ja.json
@@ -1,6 +1,7 @@
 {
   "buttons": {
     "cancel": "キャンセル",
+    "clear": "クリアー",
     "close": "閉じる",
     "copy": "コピー",
     "copyFile": "ファイルをコピー",
@@ -46,7 +47,6 @@
   },
   "files": {
     "body": "本文",
-    "clear": "クリアー",
     "closePreview": "プレビューを閉じる",
     "files": "ファイル",
     "folders": "フォルダ",
@@ -81,21 +81,22 @@
     "hu": "Magyar",
     "ar": "العربية",
     "de": "Deutsch",
+    "el": "Ελληνικά",
     "en": "English",
     "es": "Español",
     "fr": "Français",
-    "is": "",
+    "is": "Icelandic",
     "it": "Italiano",
     "ja": "日本語",
     "ko": "한국어",
-    "nlBE": "",
+    "nlBE": "Dutch (Belgium)",
     "pl": "Polski",
     "pt": "Português",
     "ptBR": "Português (Brasil)",
-    "ro": "",
+    "ro": "Romanian",
     "ru": "Русский",
     "sk": "Slovenčina",
-    "svSE": "",
+    "svSE": "Swedish (Sweden)",
     "tr": "Türkçe",
     "uk": "Українська",
     "zhCN": "中文 (简体)",
