--- a/frontend/src/i18n/sk.json
+++ b/frontend/src/i18n/sk.json
@@ -1,6 +1,7 @@
 {
   "buttons": {
     "cancel": "Zrušiť",
+    "clear": "Zrušiť výber",
     "close": "Zavrieť",
     "copy": "Kopírovať",
     "copyFile": "Kopírovať súbor",
@@ -51,7 +52,6 @@
   },
   "files": {
     "body": "Telo",
-    "clear": "Zrušiť výber",
     "closePreview": "Zavrieť náhľad",
     "files": "Súbory",
     "folders": "Priečinky",
@@ -87,6 +87,7 @@
     "hu": "Magyar",
     "ar": "العربية",
     "de": "Deutsch",
+    "el": "Ελληνικά",
     "en": "English",
     "es": "Español",
     "fr": "Français",
