--- a/frontend/src/i18n/tr.json
+++ b/frontend/src/i18n/tr.json
@@ -1,6 +1,7 @@
 {
   "buttons": {
     "cancel": "Vazgeç",
+    "clear": "Temizle",
     "close": "Kapat",
     "copy": "Kopyala",
     "copyFile": "Dosyayı kopyala",
@@ -49,7 +50,6 @@
   },
   "files": {
     "body": "Sayfa",
-    "clear": "Temizle",
     "closePreview": "Önizlemeyi kapat",
     "files": "Dosyalar",
     "folders": "Klasörler",
@@ -85,6 +85,7 @@
     "hu": "Magyar",
     "ar": "العربية",
     "de": "Deutsch",
+    "el": "Ελληνικά",
     "en": "English",
     "es": "Español",
     "fr": "Français",
