feat: add button to navigate up to .. (parent dir)

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -32,6 +32,7 @@
     "selectMultiple": "Select multiple",
     "share": "Share",
     "shell": "Toggle shell",
+    "gotoParent": "Open parent dir",
     "submit": "Submit",
     "switchView": "Switch view",
     "toggleSidebar": "Toggle sidebar",
