feat: make uploadsLimit into  user setting

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -236,7 +236,8 @@
     "userManagement": "User Management",
     "userUpdated": "User updated!",
     "username": "Username",
-    "users": "Users"
+    "users": "Users",
+    "uploadsLimit":"Limit of concurrent uploads"
   },
   "sidebar": {
     "help": "Help",
