--- a/frontend/src/i18n/zh-tw.json
+++ b/frontend/src/i18n/zh-tw.json
@@ -236,7 +236,8 @@
     "userManagement": "使用者管理",
     "userUpdated": "使用者已更新！",
     "username": "使用者名稱",
-    "users": "使用者"
+    "users": "使用者",
+    "uploadsLimit":"上傳並行任務數限制"
   },
   "sidebar": {
     "help": "幫助",
