feature: add basic create torrent and publish(qbittorent)

--- a/frontend/src/i18n/zh-cn.json
+++ b/frontend/src/i18n/zh-cn.json
@@ -14,6 +14,7 @@
     "folder": "文件夹",
     "hideDotfiles": "不显示隐藏文件",
     "info": "信息",
+    "torrent": "制作 Torrent",
     "more": "更多",
     "move": "移动",
     "moveFile": "移动文件",
@@ -117,6 +118,8 @@
     "fileInfo": "文件信息",
     "filesSelected": "已选择 {count} 个文件。",
     "lastModified": "最后修改",
+    "makeTorrentMessageSingle": "你确定要创建这个文件的种子吗？",
+    "makeTorrentMessageMultiple": "你确定要创建这 {count} 个文件的种子吗？",
     "move": "移动",
     "moveMessage": "请选择目标目录：",
     "newArchetype": "创建一个基于原型的新帖子。你的文件将会创建在内容文件夹中。",
@@ -140,7 +143,12 @@
     "optionalPassword": "密码（选填，不填即无密码）",
     "resolution": "分辨率",
     "deleteUser": "你确定要删除这个用户吗？",
-    "discardEditorChanges": "你确定要放弃所做的更改吗？"
+    "discardEditorChanges": "你确定要放弃所做的更改吗？",
+    "trackersList": "Tracker URL：",
+    "comment": "注释：",
+    "webSeeds": "Web 种子 URL：",
+    "source": "源：",
+    "privateTorrent": "私有torrent（不会在DHT网络上分发）"
   },
   "search": {
     "images": "图像",
@@ -205,7 +213,8 @@
       "execute": "执行命令",
       "modify": "编辑",
       "rename": "重命名或移动文件和文件夹",
-      "share": "分享文件"
+      "share": "分享文件",
+      "torrent": "BT制种"
     },
     "permissions": "权限",
     "permissionsHelp": "你可以将该用户设置为管理员或单独选择各项权限。如果你选择了“管理员”，则其他的选项会被自动选中，同时该用户可以管理其他用户。\n",
@@ -252,7 +261,8 @@
     "siteSettings": "网站设置"
   },
   "success": {
-    "linkCopied": "链接已复制！"
+    "linkCopied": "链接已复制！",
+    "torrentCreated": "种子已创建！"
   },
   "time": {
     "days": "天",
