--- a/frontend/src/i18n/zh-cn.json
+++ b/frontend/src/i18n/zh-cn.json
@@ -42,7 +42,9 @@
     "openFile": "打开文件",
     "continue": "继续",
     "fullScreen": "切换全屏",
-    "discardChanges": "放弃更改"
+    "discardChanges": "放弃更改",
+    "detailed": "转到详细视图",
+    "compact": "转到精简视图"
   },
   "download": {
     "downloadFile": "下载文件",
@@ -144,11 +146,15 @@
     "resolution": "分辨率",
     "deleteUser": "你确定要删除这个用户吗？",
     "discardEditorChanges": "你确定要放弃所做的更改吗？",
+    "pieceLength": "分片大小：",
+    "auto": "自动",
     "trackersList": "Tracker URL：",
     "comment": "注释：",
     "webSeeds": "Web 种子 URL：",
     "source": "源：",
-    "privateTorrent": "私有torrent（不会在DHT网络上分发）"
+    "includeDate": "写入创建日期",
+    "privateTorrent": "私有 torrent （不会在DHT网络上分发）",
+    "publishMessage": "你确定要发布这个种子吗？"
   },
   "search": {
     "images": "图像",
@@ -245,7 +251,16 @@
     "userManagement": "用户管理",
     "userUpdated": "用户已更新！",
     "username": "用户名",
-    "users": "用户"
+    "users": "用户",
+    "torrentSettings": "BT设置",
+    "makeTorrent": "制种",
+    "makeTorrentSettingsDescription": "你可以在此设置BT种子（*.torrent）的默认参数。这些参数可以在创建种子时修改。",
+    "trackersListUrl": "Tracker URL 列表来源",
+    "publish": "发布",
+    "qbSettingsDescription": "你可以在此设置 qBittorrent WebUI 的地址、用户名和密码。",
+    "qbUrl": "qBittorrent WebUI 地址",
+    "qbUsername": "qBittorrent WebUI 用户名",
+    "qbPassword": "qBittorrent WebUI 密码"
   },
   "sidebar": {
     "help": "帮助",
@@ -262,7 +277,8 @@
   },
   "success": {
     "linkCopied": "链接已复制！",
-    "torrentCreated": "种子已创建！"
+    "torrentCreated": "种子已创建！",
+    "torrentPublished": "种子已发布！"
   },
   "time": {
     "days": "天",
