feat: add option for users to select their preferred way of formatting date times

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -191,6 +191,7 @@
     "insertRegex": "Insert regex expression",
     "instanceName": "Instance name",
     "language": "Language",
+    "dateTimeFormat": "Date and time format",
     "lockPassword": "Prevent the user from changing the password",
     "newPassword": "Your new password",
     "newPasswordConfirm": "Confirm your new password",
