--- a/frontend/src/i18n/fr.json
+++ b/frontend/src/i18n/fr.json
@@ -139,8 +139,8 @@
     "images": "Images",
     "music": "Musique",
     "pdf": "PDF",
-    "pressToSearch": "Appuyez du entrée pour chercher...",
-    "search": "Recherche en cours...",
+    "pressToSearch": "Appuyez sur entrée pour chercher...",
+    "search": "Rechercher...",
     "typeToSearch": "Écrivez pour chercher...",
     "types": "Types",
     "video": "Video"
