--- a/frontend/src/i18n/ru.json
+++ b/frontend/src/i18n/ru.json
@@ -37,7 +37,8 @@
     "toggleSidebar": "Боковая панель",
     "update": "Обновить",
     "upload": "Загрузить",
-    "openFile": "Открыть файл"
+    "openFile": "Открыть файл",
+    "stopSearch": "Прекратить поиск"
   },
   "download": {
     "downloadFile": "Скачать файл",
