--- a/frontend/src/i18n/pt-br.json
+++ b/frontend/src/i18n/pt-br.json
@@ -66,7 +66,7 @@
     "home": "Início",
     "lastModified": "Última modificação",
     "loading": "Carregando...",
-    "lonely": "Está solitário aqui...",
+    "lonely": "Não há nada aqui...",
     "metadata": "Metadados",
     "multipleSelectionEnabled": "Seleção múltipla ativada",
     "name": "Nome",
