--- a/frontend/src/i18n/el.json
+++ b/frontend/src/i18n/el.json
@@ -56,7 +56,8 @@
     "forbidden": "Δεν έχετε άδεια πρόσβασης σε αυτό.",
     "internal": "Προέκυψε εσωτερικό σφάλμα.",
     "notFound": "Αυτή η τοποθεσία δεν μπορεί να βρεθεί.",
-    "connection": "Ο διακομιστής δεν είναι διαθέσιμος."
+    "connection": "Ο διακομιστής δεν είναι διαθέσιμος.",
+    "invalidName": "Μη έγκυρο όνομα για αρχείο ή κατάλογο."
   },
   "files": {
     "body": "Περιεχόμενο",
