--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -56,7 +56,8 @@
     "forbidden": "You don't have permissions to access this.",
     "internal": "Something really went wrong.",
     "notFound": "This location can't be reached.",
-    "connection": "The server can't be reached."
+    "connection": "The server can't be reached.",
+    "invalidName": "Invalid name for file or directory."
   },
   "files": {
     "body": "Body",
