--- a/frontend/src/i18n/fa.json
+++ b/frontend/src/i18n/fa.json
@@ -56,7 +56,8 @@
     "forbidden": "شما مجوز دسترسی به این را ندارید.",
     "internal": "اشتباهی اتفاق افتاده است",
     "notFound": "این محل قابل دسترسی نیست",
-    "connection": "سرور قابل دسترسی نیست"
+    "connection": "سرور قابل دسترسی نیست",
+    "invalidName": "نام نامعتبر برای فایل یا دایرکتوری"
   },
   "files": {
     "body": "بدنه",
