--- a/frontend/src/i18n/he.json
+++ b/frontend/src/i18n/he.json
@@ -56,7 +56,8 @@
     "forbidden": "אין לך הרשאות גישה",
     "internal": "משהו השתבש",
     "notFound": "לא ניתן להגיע למיקום זה",
-    "connection": "לא ניתן להגיע לשרת"
+    "connection": "לא ניתן להגיע לשרת",
+    "invalidName": "שם לא חוקי לקובץ או לספרייה"
   },
   "files": {
     "body": "גוף",
