--- a/frontend/src/i18n/ja.json
+++ b/frontend/src/i18n/ja.json
@@ -56,7 +56,8 @@
     "forbidden": "これにアクセスする権限がありません。",
     "internal": "内部エラーが発生しました。",
     "notFound": "リソースが見つかりませんでした。",
-    "connection": "サーバーに接続できませんでした。"
+    "connection": "サーバーに接続できませんでした。",
+    "invalidName": "ファイルまたはディレクトリの名前が無効です。"
   },
   "files": {
     "body": "本文",
