--- a/frontend/src/i18n/ru.json
+++ b/frontend/src/i18n/ru.json
@@ -56,7 +56,8 @@
     "forbidden": "У вас нет прав доступа к этому.",
     "internal": "Что-то пошло не так.",
     "notFound": "Неправильная ссылка.",
-    "connection": "Нет подключения к серверу."
+    "connection": "Нет подключения к серверу.",
+    "invalidName": "Недопустимое имя файла или каталога."
   },
   "files": {
     "body": "Тело",
