--- a/frontend/src/i18n/uk.json
+++ b/frontend/src/i18n/uk.json
@@ -56,7 +56,8 @@
     "forbidden": "У вас немає прав доступу до цього.",
     "internal": "Щось пішло не так.",
     "notFound": "Неправильне посилання.",
-    "connection": "Немає підключення до сервера."
+    "connection": "Немає підключення до сервера.",
+    "invalidName": "Недійсне ім'я файлу або каталогу."
   },
   "files": {
     "body": "Тіло",
