--- a/frontend/src/i18n/ko.json
+++ b/frontend/src/i18n/ko.json
@@ -56,7 +56,8 @@
     "forbidden": "접근 권한이 없습니다.",
     "internal": "오류가 발생하였습니다.",
     "notFound": "해당 경로를 찾을 수 없습니다.",
-    "connection": "The server can't be reached."
+    "connection": "The server can't be reached.",
+    "invalidName": "파일 또는 디렉토리 이름이 잘못되었습니다."
   },
   "files": {
     "body": "본문",
