--- a/frontend/src/i18n/ko.json
+++ b/frontend/src/i18n/ko.json
@@ -3,17 +3,17 @@
     "cancel": "취소",
     "clear": "지우기",
     "close": "닫기",
-    "continue": "Continue",
+    "continue": "계속",
     "copy": "복사",
     "copyFile": "파일 복사",
     "copyToClipboard": "클립보드 복사",
-    "copyDownloadLinkToClipboard": "Copy download link to clipboard",
+    "copyDownloadLinkToClipboard": "다운로드 링크를 클립보드에 복사",
     "create": "생성",
     "delete": "삭제",
     "download": "다운로드",
-    "file": "File",
-    "folder": "Folder",
-    "fullScreen": "Toggle full screen",
+    "file": "파일",
+    "folder": "폴더",
+    "fullScreen": "전체 화면 전환",
     "hideDotfiles": "숨김파일(dotfile)을 표시 안함",
     "info": "정보",
     "more": "더보기",
@@ -24,7 +24,7 @@
     "ok": "확인",
     "permalink": "링크 얻기",
     "previous": "이전",
-    "preview": "Preview",
+    "preview": "미리보기",
     "publish": "게시",
     "rename": "이름 바꾸기",
     "replace": "대체",
@@ -36,13 +36,13 @@
     "selectMultiple": "다중 선택",
     "share": "공유",
     "shell": "쉘 전환",
-    "submit": "Submit",
+    "submit": "제출",
     "switchView": "보기 전환",
     "toggleSidebar": "사이드바 전환",
     "update": "업데이트",
     "upload": "업로드",
-    "openFile": "Open file",
-    "discardChanges": "Discard"
+    "openFile": "파일 열기",
+    "discardChanges": "변경 사항 취소"
   },
   "download": {
     "downloadFile": "파일 다운로드",
@@ -50,13 +50,13 @@
     "downloadSelected": "선택 항목 다운로드"
   },
   "upload": {
-    "abortUpload": "Are you sure you wish to abort?"
+    "abortUpload": "업로드를 정말 취소하시겠습니까?"
   },
   "errors": {
     "forbidden": "접근 권한이 없습니다.",
     "internal": "오류가 발생하였습니다.",
     "notFound": "해당 경로를 찾을 수 없습니다.",
-    "connection": "The server can't be reached."
+    "connection": "연결할 수 없습니다."
   },
   "files": {
     "body": "본문",
@@ -74,7 +74,7 @@
     "sortByLastModified": "수정시간순 정렬",
     "sortByName": "이름순",
     "sortBySize": "크기순",
-    "noPreview": "Preview is not available for this file."
+    "noPreview": "이 파일은 미리보기를 지원하지 않습니다."
   },
   "help": {
     "click": "파일이나 디렉토리를 선택해주세요.",
@@ -109,8 +109,8 @@
     "currentlyNavigating": "현재 위치:",
     "deleteMessageMultiple": "{count} 개의 파일을 삭제하시겠습니까?",
     "deleteMessageSingle": "파일 혹은 디렉토리를 삭제하시겠습니까?",
-    "deleteMessageShare": "Are you sure you wish to delete this share({path})?",
-    "deleteUser": "Are you sure you want to delete this user?",
+    "deleteMessageShare": "이 공유({path})를 삭제하시겠습니까?",
+    "deleteUser": "이 사용자를 삭제하시겠습니까?",
     "deleteTitle": "파일 삭제",
     "displayName": "게시 이름:",
     "download": "파일 다운로드",
@@ -137,11 +137,11 @@
     "show": "보기",
     "size": "크기",
     "upload": "업로드",
-    "uploadFiles": "Uploading {files} files...",
+    "uploadFiles": "{files}개 파일 업로드 중...",
     "uploadMessage": "업로드 옵션을 선택하세요.",
-    "optionalPassword": "Optional password",
-    "resolution": "Resolution",
-    "discardEditorChanges": "Are you sure you wish to discard the changes you've made?"
+    "optionalPassword": "비밀번호 (선택)",
+    "resolution": "해상도",
+    "discardEditorChanges": "편집한 변경 사항을 정말 취소하시겠습니까?"
   },
   "search": {
     "images": "이미지",
@@ -150,7 +150,7 @@
     "pressToSearch": "검색하려면 엔터를 입력하세요",
     "search": "검색...",
     "typeToSearch": "검색어 입력...",
-    "types": "Types",
+    "types": "종류",
     "video": "비디오"
   },
   "settings": {
@@ -169,19 +169,19 @@
     "commandRunner": "명령 실행기",
     "commandRunnerHelp": "이벤트에 해당하는 명령을 설정하세요. 줄당 1개의 명령을 적으세요. 환경 변수{0} 와 {1}이 사용가능하며,  {0} 은 {1}에 상대 경로 입니다. 자세한 사항은 {2} 를 참조하세요.",
     "commandsUpdated": "명령 수정됨!",
-    "createUserDir": "Auto create user home dir while adding new user",
-    "minimumPasswordLength": "Minimum password length",
-    "tusUploads": "Chunked Uploads",
-    "tusUploadsHelp": "File Browser supports chunked file uploads, allowing for the creation of efficient, reliable, resumable and chunked file uploads even on unreliable networks.",
-    "tusUploadsChunkSize": "Indicates to maximum size of a request (direct uploads will be used for smaller uploads). You may input a plain integer denoting byte size input or a string like 10MB, 1GB etc.",
-    "tusUploadsRetryCount": "Number of retries to perform if a chunk fails to upload.",
-    "userHomeBasePath": "Base path for user home directories",
-    "userScopeGenerationPlaceholder": "The scope will be auto generated",
-    "createUserHomeDirectory": "Create user home directory",
+    "createUserDir": "신규 사용자 홈 디렉토리 자동 생성",
+    "minimumPasswordLength": "비밀번호 최소 길이",
+    "tusUploads": "분할 업로드",
+    "tusUploadsHelp": "File Browser는 불안정한 네트워크에서도 효율적이고 신뢰성 있는 분할 업로드를 지원합니다.",
+    "tusUploadsChunkSize": "업로드 요청의 최대 크기 (예: 10MB, 1GB)",
+    "tusUploadsRetryCount": "업로드 실패 시 재시도 횟수",
+    "userHomeBasePath": "사용자 홈 디렉토리 기본 경로",
+    "userScopeGenerationPlaceholder": "범위는 자동으로 생성됩니다.",
+    "createUserHomeDirectory": "사용자 홈 디렉토리 생성",
     "customStylesheet": "커스텀 스타일시트",
     "defaultUserDescription": "아래 사항은 신규 사용자들에 대한 기본 설정입니다.",
     "disableExternalLinks": "외부 링크 감추기",
-    "disableUsedDiskPercentage": "Disable used disk percentage graph",
+    "disableUsedDiskPercentage": "디스크 사용량 그래프 숨기기",
     "documentation": "문서",
     "examples": "예",
     "executeOnShell": "쉘에서 실행",
@@ -202,7 +202,7 @@
     "path": "경로",
     "perm": {
       "create": "파일이나 디렉토리 생성하기",
-      "delete": "화일이나 디렉토리 삭제하기",
+      "delete": "파일이나 디렉토리 삭제하기",
       "download": "다운로드",
       "execute": "명령 실행",
       "modify": "파일 편집",
@@ -217,14 +217,14 @@
     "rules": "룰",
     "rulesHelp": "사용자별로 규칙을 허용/방지를 지정할 수 있습니다. 방지된 파일은 보이지 않고 사용자들은 접근할 수 없습니다. 사용자의 접근 허용 범위와 관련해 정규표현식(regex)과 경로를 지원합니다.\n",
     "scope": "범위",
-    "setDateFormat": "Set exact date format",
+    "setDateFormat": "날짜 형식 설정",
     "settingsUpdated": "설정 수정됨!",
     "shareDuration": "공유 기간",
     "shareManagement": "공유 내역 관리",
-    "shareDeleted": "Share deleted!",
+    "shareDeleted": "공유가 삭제됨!",
     "singleClick": "한번 클릭으로 파일과 폴더를 열도록 합니다.",
     "themes": {
-      "default": "System default",
+      "default": "시스템 기본값",
       "dark": "다크테마",
       "light": "라이트테마",
       "title": "테마"
@@ -242,7 +242,7 @@
   },
   "sidebar": {
     "help": "도움말",
-    "hugoNew": "Hugo New",
+    "hugoNew": "Hugo 새로 만들기",
     "login": "로그인",
     "logout": "로그아웃",
     "myFiles": "내 파일",
@@ -261,6 +261,6 @@
     "hours": "시",
     "minutes": "분",
     "seconds": "초",
-    "unit": "Time Unit"
+    "unit": "시간 단위"
   }
 }
