fix: disallow "/" in renamed directory and filenames

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -57,7 +57,8 @@
     "forbidden": "You don't have permissions to access this.",
     "internal": "Something really went wrong.",
     "notFound": "This location can't be reached.",
-    "connection": "The server can't be reached."
+    "connection": "The server can't be reached.",
+    "invalidFileName": "The file or directory name is not valid."
   },
   "files": {
     "body": "Body",
